# riget-zoo-adventures

./: README.md
backend/: README.md  app.py  config.py  conftest.py  pyproject.toml  requirements.txt
backend/alembic/versions/: a1b7680cf4f0_update_tables.py
backend/api/: article.py  auth.py  booking.py
backend/api/auth/: dtos.py  services.py  utils.py  views.py
backend/api/booking/: dtos.py  services.py  views.py
backend/api/common/: exceptions.py
backend/api/users/: dtos.py  services.py  views.py
backend/db/: articles.json  db.py  hotel-bookings.json  hotel-rooms.json  ticket-bookings.json  tickets.json  users.json
backend/db/models/: article.py  booking.py  day.py  hotel_room.py  user.py  zoo_ticket.py
backend/dependencies/: db.py  dp.py
backend/routes/: user.py
backend/scripts/: seed.py
backend/tests/: test_booking.py  test_users.py
backend/utils/: auth.py  db.py  user.py
frontend/: bun.lockb  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html
frontend/src/: App.js  index.css  index.js  providers.js
frontend/src/components/: about-item.js  about-section.js  app-sidebar.js  article-card.js  footer.js  hamburger-menu.js  home-sections.js  landing-section.js  nav-menu.js  page-heading.js  quiz-card.js  search-input.js  search-results.js  text-size-toggle.js  theme-toggle.js  zoo-map.js
frontend/src/contexts/: auth-provider.js  text-size-provider.js  theme-provider.js
frontend/src/forms/: register-form.js  signin-form.js
frontend/src/lib/: config.js  utils.js
frontend/src/pages/: article.js  auth.js  (+12 more)
(+11 files in other folders)
